--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                     <p><a href="https://www.linkedin.com/in/jenniferbrabec" target="_blank">LinkedIn</a></p>
                     <p><a href="https://github.com/jabrabec" target="_blank">GitHub</a></p>
                     <h2>Projects</h2>
+                    <p><a href="https://www.echtragames.com/" target="_blank">Echtra Games</a>: unannounced triple-A, cross-platform sci-fi ARPG helmed by the Diablo I/II founders and set in the universe of a beloved IP 
+                    </p>
+                    <p><a href="https://starwarshunters.com/" target="_blank">Star Wars: Hunters</a> 
+                    </p>
+                    <p><a href="https://www.torchlight3.com/" target="_blank">Torchlight III</a> 
+                    </p>
+
                     <p><a href="https://vimeo.com/202998033" target="_blank">SNAPPy Finder</a> (<a
                             href="https://github.com/jabrabec/Hackbright-project_SNAPPy-Finder" target="_blank">GitHub</a>)
                     </p>
