--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                             Bachelor of Arts in Linguistics</a></p>
                     <p><a href="https://www.coursera.org/" target="_blank">Coursera</a>:
                     <ul>
-                        <li><a href="https://www.coursera.org/records/EbMkFGm3AHcua87B" target="_blank">The Data Scientist’s
+                        <li><a href="https://www.coursera.org/account/accomplishments/verify/CNU9KHE3ZFJF" target="_blank">Introduction to C++ Programming and Unreal (University of Colorado)</a></li>
+                        <li><a href="https://www.coursera.org/account/accomplishments/verify/EbMkFGm3AHcua87B" target="_blank">The Data Scientist’s
                                 Toolbox (Johns Hopkins University)</a></li>
-                        <li><a href="https://www.coursera.org/records/2sgsTFb3GHhqfrNa" target="_blank">R Programming (Johns
+                        <li><a href="https://www.coursera.org/account/accomplishments/verify/2sgsTFb3GHhqfrNa" target="_blank">R Programming (Johns
                                 Hopkins University)</a></li>
                     </ul>
                     </p>
